test/tests/operators/parallel/error_bytes_output.txt
error: subpipeline must not produce bytes
 --> tests/operators/parallel/error_bytes_output.tql:6:10
  |
6 | parallel { write_json }
  |          ^^^^^^^^^^^^^^ 
  |
